# getv

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  getv.webm  goal.yaml  index.html  project.functions.toon  pyproject.toml
.github/workflows/: tests.yml
docs/: COMPARISON.md  EXAMPLES.md  GRAB.md  INTEGRATIONS.md  SECURITY.md
examples/: 01_quick_start.py  02_ssh_from_profile.py  03_litellm_multi_provider.py  04_ollama_config.py  05_docker_env.py  06_app_defaults.py  07_pipe_and_shell.sh  08_pydantic_settings.py  09_grab_api_key.py
getv/: __init__.py  __main__.py  app_defaults.py  formats.py  profile.py  security.py  store.py  watcher.py
getv/integrations/: __init__.py  clipboard.py  curl.py  docker.py  litellm.py  nfo.py  ollama.py  pydantic_env.py  ssh.py  subprocess_env.py
tests/: test_app_defaults.py  test_cli_e2e.py  test_clipboard.py  test_integrations.py  test_nfo_integration.py  test_profile.py  test_profile_features.py  test_security.py  test_store.py  test_watcher.py
